--- a/practice5/Makefile
+++ b/practice5/Makefile
@@ -2,8 +2,8 @@
 FILE = main
 
 main: $(FILE).py
-	python $(FILE).py
+	python3 $(FILE).py
 git: $(FILE).py
 	git add $(FILE).py; git commit -m "v:"; git push
 debug: $(FILE).py
-	python -m pdb $(FILE).py
+	python3 -m pdb $(FILE).py
